--- a/source/_layouts/default.html
+++ b/source/_layouts/default.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Lucas The Nomad</title>
+    <title>Lucas The Nomad | {% if page.title %} {{ page.title }} {% else %} {{site.subtitle}} {% endif %}</title>
     <meta name="description" content="description">
 
     <link href="favicon.ico" rel="icon" type="image/x-icon" />
