--- a/sass/style.scss
+++ b/sass/style.scss
@@ -728,38 +728,18 @@ only screen and (min-resolution: 144dpi)              and (min-width: 48em) {
 }
 .pagination { background-color: $pagination-background; color: $pagination-text; position: relative; text-shadow: 2px 2px 0 rgba(0, 0, 0, 0.2); -webkit-user-select: none; -moz-user-select: none; -ms-user-select: none; }
 .pagination::after { background-color: rgba(0, 0, 0, 0.05); content: ""; display: block; position: absolute; left: 0; bottom: -4px; width: 100%; height: 4px; z-index: 4444; }
-.pagination .inner { background: none !important; padding: 20px 0; }
+.pagination .inner { background: none !important; padding: 20px 10px 20px 10px; height: 18px; }
 .pagination p { margin: 0 !important; position: relative; }
 .pagination a, .pagination .current_page { font-size: 1.5em; line-height: 1em; padding: 16px 0 20px; }
 .pagination a { color: $pagination-text; display: block; position: absolute; text-decoration: none; top: 0; opacity: 0.7; z-index: 6666; -webkit-transition: opacity 0.2s ease-in-out; -moz-transition: opacity 0.2s ease-in-out; -o-transition: opacity 0.2s ease-in-out; -ms-transition: opacity 0.2s ease-in-out; transition: opacity 0.2s ease-in-out; }
 .pagination a:hover { color: $pagination-text; opacity: 1; }
-.pagination a::before { content: ""; display: block; position: absolute; width: 60px; height: 60px; top: 0; }
-.pagination a.previous { left: -10px; padding-left: 60px; }
+.pagination a.next::before, a.previous::before { content: ""; display: block; position: absolute; width: 60px; height: 60px; top: 0; }
+.pagination a.previous { left: 0px; padding-left: 60px; }
 .pagination a.previous::before { left: 0; background-position: 0 -720px; }
-.pagination a.next { right: -10px; padding-right: 60px; }
+.pagination a.archive { position: relative; text-align: center; margin-top: -20px}
+.pagination a.next { right: 0px; padding-right: 60px; }
 .pagination a.next::before { right: 0; background-position: -60px -720px; }
 .pagination .current_page { display: block; font-style: italic; text-align: center; opacity: 0.4; }
-
-/* @media screen and (max-width: 768px) */
-@media screen and (max-width: 48em) {
-  .pagination a { overflow: hidden; text-indent: 100%; white-space: nowrap; width: 60px; }
-}
-
-/* @media screen and (min-width: 1024px) */
-@media screen and (min-width: 64em) {
-  .pagination .hide_from_desktop { display: none !important }
-  .pagination .hide_from_mobile { display: block !important }
-}
-
-/* @media screen and (min-width: 1280px) */
-@media screen and (min-width: 80em) {
-  .pagination a, .pagination .current_page { font-size: 1.875em; line-height: 1em; padding: 23px 0 27px; }
-  .pagination a::before { width: 80px; height: 80px; }
-  .pagination a.previous { padding-left: 86px }
-  .pagination a.previous::before { background-position: 0 -640px }
-  .pagination a.next { padding-right: 86px }
-  .pagination a.next::before { background-position: -80px -640px }
-}
 
 /*
 @group Typography
