hide broken flickr thingy

--- a/source/_layouts/default.html
+++ b/source/_layouts/default.html
@@ -104,11 +104,11 @@
                   </section><!-- /.widget_about -->
 
 
-                <section class="widget widget_flickr">
-                  <h4 class="widget_heading">Flickr</h4>
-                  <ul class="image_feed flickr_feed clearfix" data-id="83213379@N00" data-count="16">
-                  </ul>
-                </section><!-- /#flickr_widget -->
+                <!-- <section class="widget widget_flickr"> -->
+                <!--   <h4 class="widget_heading">Flickr</h4> -->
+                <!--   <ul class="image_feed flickr_feed clearfix" data-id="83213379@N00" data-count="16"> -->
+                <!--   </ul> -->
+                <!-- </section> -->
 
                 <section class="widget widget_navi clearfix">
                 <div id="tripit-badge" style="float: right;">
